lnidb-backend/iptables.conf
# exemplo de configuracao iptables para lnidb (/etc/sysconfig/iptables)
# $Id: iptables.conf,v 1.1 2013/10/01 21:59:54 bergo Exp $
# Firewall configuration written by system-config-firewall
# Manual customization of this file is not recommended.
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
# FTP
-A INPUT -m state --state NEW -s 143.106.129.0/26 -m tcp -p tcp --dport 20 -j ACCEPT
-A INPUT -m state --state NEW -s 127.0.0.0/24 -m tcp -p tcp --dport 20 -j ACCEPT
-A INPUT -m state --state NEW -s 143.106.129.0/26 -m tcp -p tcp --dport 21 -j ACCEPT
-A INPUT -m state --state NEW -s 127.0.0.0/24 -m tcp -p tcp --dport 21 -j ACCEPT
# SSH
-A INPUT -m state --state NEW -s 143.106.129.0/26 -m tcp -p tcp --dport 22 -j ACCEPT
-A INPUT -m state --state NEW -s 127.0.0.0/24     -m tcp -p tcp --dport 22 -j ACCEPT
# HTTP
-A INPUT -m state --state NEW -s 143.106.129.0/26 -m tcp -p tcp --dport 80 -j ACCEPT
-A INPUT -m state --state NEW -s 143.106.137.129/32 -m tcp -p tcp --dport 80 -j ACCEPT
-A INPUT -m state --state NEW -s 143.106.137.154/32 -m tcp -p tcp --dport 80 -j ACCEPT
-A INPUT -m state --state NEW -s 143.106.155.192/26 -m tcp -p tcp --dport 80 -j ACCEPT
-A INPUT -m state --state NEW -s 143.106.187.192/26 -m tcp -p tcp --dport 80 -j ACCEPT
-A INPUT -m state --state NEW -s 127.0.0.0/24     -m tcp -p tcp --dport 80 -j ACCEPT
-A INPUT -m state --state NEW -s 143.106.165.0/24 -m tcp -p tcp --dport 80 -j ACCEPT
-A INPUT -m state --state NEW -s 143.106.137.64/26 -m tcp -p tcp --dport 80 -j ACCEPT
# POSTGRESQL
-A INPUT -m state --state NEW -s 143.106.129.0/26 -m tcp -p tcp --dport 5432 -j ACCEPT
-A INPUT -m state --state NEW -s 127.0.0.0/24     -m tcp -p tcp --dport 5432 -j ACCEPT
-A INPUT -m state --state NEW -s 143.106.129.0/26 -m udp -p udp --dport 5432 -j ACCEPT
-A INPUT -m state --state NEW -s 127.0.0.0/24     -m udp -p udp --dport 5432 -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
COMMIT
